zirgen/dsl/test/repro/crash_while_inlining_back.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// TODO: better diagnostic
// CHECK: error: Val has no layout

component Top() {
  x := -Reg(1);
  y := Reg(x@1 +-x);
}

